# igor-microphoned

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt  setup.py
igor-microphoned-daemon/: Cargo.toml
igor-microphoned-daemon/src/: cmdline.rs  daemon.rs  main.rs
igor-microphoned-lib/: Cargo.toml
igor-microphoned-lib/src/: errors.rs  lib.rs  util.rs
microphoned/: daemon.py  sound.py  util.py
tests/: daemon_tests.py  sound_tests.py  util_tests.py
