[package]
name = "igor-microphoned-daemon"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/IgorAutomation/"
autobins = false

[[bin]]
name = "igormd"
path = "src/main.rs"

[dependencies]
igor-microphoned-lib = { path = "../igor-microphoned-lib" }
cpal = "0.12.1"
structopt = "0.3"

[build-dependencies]
